--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,5 @@
 .App {
-  background-color: black;
-
   display: flex;
   flex-direction: column;
-  align-items: center;
-
-  height: 100vh;
-  width: 100vw;
+  gap: 20px;
 }
