--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,20 @@
-body, h1, h2 {
+body {
+    background-color:  #121212;
+
     font-family: 'Bebas Neue', monospace;
+    color: #ddd;
+    letter-spacing: 2px;
+    
+    margin: 20px 10% 20px 10%
+}
+
+p, h1, h2, h3, h4, h5 {
     margin: 0;
+    padding: 0;
+}
+
+p, a {
+    color: inherit;
+    font: 15px 'Raleway', sans-serif;
+    text-decoration: none;
 }
