--- a/src/experiments/Experiment.module.css
+++ b/src/experiments/Experiment.module.css
@@ -1,9 +1,14 @@
 .Experiment {
     border: 2px solid #ddd;
+    margin: 20px 0;
 }
 
 .ExperimentContainer {
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+.CodeHeadings {
+    margin: 0;
 }
